# MyHouseRPi

./: .gitignore  CMakeCache.txt  CMakeLists.txt  CPackConfig.cmake  CPackSourceConfig.cmake  Makefile  MyHouse  README.md  cmake_install.cmake  main.c
app/mhrpi/: .snyk  App.js  README.md  app.json  images.tar  package.json
app/mhrpi/screens/camera/: index.js
app/mhrpi/screens/lights/: index.js
app/mhrpi/screens/login/: index.js
app/mhrpi/screens/mainmenu/: index.js
app/mhrpi/src/: SocketService.js
app/mhrpi_python/: README.md  init.py  users.info  utils.py
app/mhrpi_python/core/: __init__.py  login.py  main.py  windowManager.py
app/mhrpi_python/core/lib/: __init__.py  libmessage.py  libsocket.py  libuser.py
app/mhrpi_python/qtdesigner/: login.ui  main.ui  untitled.ui
config_service/: myhouse  myhouse.service  myhouse.service.save
include/: camera_handler.h  constants.h  door_handler.h  gpio_handler.h  libmanager.h  light_handler.h
lib/: CMakeLists.txt  Makefile  camera_handler.c  cmake_install.cmake  door_handler.c  gpio_handler.c  libmanager.c  light_handler.c
